--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,9 +65,9 @@
 
             <div class="footer">
                 <p>
-                    <a href="http://dept.example.edu/">Illustrious Department</a>
+                    <a href="https://www.mn.uio.no/fysikk/english/">Department of Physics</a>
                     at the
-                    <a href="http://example.edu/">University of Example</a>
+                    <a href="https://www.uio.no/english/">University of Oslo, Norway</a>
                 </p>
             </div>
 
