people info update

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -20,6 +20,18 @@
       </style>
     </head>
     <body>
+      <div class="w3-content w3-display-container" style="max-width:800px">
+        <img class="mySlides" src="/img/cover.jpeg" style="width:100%">
+        <img class="mySlides" src="/img/cover2.jpeg" style="width:100%">
+        <img class="mySlides" src="/img/cover2.jpeg" style="width:100%">
+        <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+          <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+          <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+          <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+          <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+          <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+        </div>
+      </div>
       <script>
       var slideIndex = 1;
       showDivs(slideIndex);
@@ -47,7 +59,7 @@
         dots[slideIndex-1].className += " w3-white";
       }
     </script>
-    
+
         <div class="container">
             <!-- This is a bit nasty, but it basically says be a column first, and on larger screens be a spaced out row -->
             <div class="header d-flex
