--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -14,6 +14,9 @@
     </head>
     <body>
         <div class="container">
+          <img style="float: left; margin-right: 1em"
+                            src="{{ site.base }}/img/cover.jpeg"
+                            width="56" height="56" alt="cover" />
             <!-- This is a bit nasty, but it basically says be a column first, and on larger screens be a spaced out row -->
             <div class="header d-flex
                         flex-column
