--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -14,9 +14,6 @@
     </head>
     <body>
         <div class="container">
-          <img style="float: left; margin-right: 1em"
-                            src="{{ site.base }}/img/cover.jpeg"
-                            width="56" height="56" alt="cover" />
             <!-- This is a bit nasty, but it basically says be a column first, and on larger screens be a spaced out row -->
             <div class="header d-flex
                         flex-column
@@ -51,6 +48,11 @@
                     {% endfor %}
 
                 </ul>
+            </div>
+            <div class="containertop">
+            <img style="float: left; margin-right: 1em"
+                              src="{{ site.base }}/img/cover.jpeg"
+                              width="56" height="56" alt="cover" />
             </div>
 
             {% if page.image %}
