--- a/css/group.scss
+++ b/css/group.scss
@@ -37,11 +37,11 @@ a > .fa {
 }
 
 /* /\* Customize container *\/ */
-/* @media (min-width: 768px) { */
-/*     .container { */
-/*         max-width: 730px; */
-/*     } */
-/* } */
+@media (min-width: 768px) {
+    .containertop { 
+        max-width: 730px;
+     }
+ }
 
 /* Jumbotron */
 .jumbotron {
