--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -51,8 +51,7 @@
             </div>
             <div class="containertop">
             <img style="float: left; margin-right: 1em"
-                              src="{{ site.base }}/img/cover.jpeg"
-                              width="56" height="56" alt="cover" />
+            src="{{ site.base }}/img/cover.jpeg" alt="cover" />
             </div>
 
             {% if page.image %}
