--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -4,9 +4,53 @@
 		<td>
 			<span class="date">
 				
+				<big><strong>2023</strong></big><br />
+				
+				August
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Substorm onset prediction using machine learning classified auroral images.
+			</span><br />
+			<span class="authors">
+				Pascal Sado, Lasse Boy Novock Clausen, Wojciech Jacek Miloch, and Hannes Nickisch.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Space Weather 21(2)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2023</strong></big><br />
+				
+				August
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Tandem Observations of Nighttime Mid-Latitude Topside Ionospheric Perturbations.
+			</span><br />
+			<span class="authors">
+				Hosub Song, Jaeheung Park, Yaqi Jin, Yuichi Otsuka, Stephan Buchert, Jaejin Lee, and Yu Yi.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Space Weather 21(2)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
 				<big><strong>2022</strong></big><br />
 				
-				December
+				August
 			</span>
 		</td>
 		<td class="publication">
@@ -17,6 +61,28 @@
 				Pascal Sado, Lasse Boy Novock Clausen, Wojciech Jacek Miloch, and Hannes Nickisch.
 			</span><br />
 			<span class="venuetype"></span><span class="venue">Journal of Geophysical Research: Space Physics 127(1)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2022</strong></big><br />
+				
+				August
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Ionospheric Plasma IRregularities-IPIR-data product based on data from the Swarm satellites.
+			</span><br />
+			<span class="authors">
+				Yaqi Jin, Daria Kotova, Chao Xiong, Steffen M Brask, Lasse BN Clausen, Guram Kervalishvili, Claudia Stolle, and Wojciech J Miloch.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Geophysical Research: Space Physics 127(4)</span>.
 			<br />
 			<span class="links">
 			</span>
@@ -640,3 +706,4 @@
 	</tr>
 </tbody>
 </table>
+
