--- a/_includes/conf.html
+++ b/_includes/conf.html
@@ -14,7 +14,7 @@
 				Long Term Statistical Space Weather Analysis.
 			</span><br />
 			<span class="authors">
-				W J Miloch P. Sado and H Nickisch.
+				W J Miloch P Sado and H Nickisch.
 			</span><br />
 			<span class="venuetype"></span><span class="venue">18th European Space Weather Week, Zagreb, Croatia</span>.
 			<br />
