--- a/_includes/conf.html
+++ b/_includes/conf.html
@@ -14,7 +14,7 @@
 				Long Term Statistical Space Weather Analysis.
 			</span><br />
 			<span class="authors">
-				W J Miloch P Sado and H Nickisch.
+				P Sado, L B N Clausen, W J Miloch, and H Nickisch.
 			</span><br />
 			<span class="venuetype"></span><span class="venue">18th European Space Weather Week, Zagreb, Croatia</span>.
 			<br />
@@ -36,7 +36,7 @@
 				Ionospheric plasma structuring over Antarctica based on satellite and ground observations.
 			</span><br />
 			<span class="authors">
-				Daria Kotova Wojciech Jacek Miloch and Yaqi Jin.
+				Wojciech Jacek Miloch, Daria Kotova, and Yaqi Jin.
 			</span><br />
 			<span class="venuetype"></span><span class="venue">10th SCAR Open Science Conference</span>.
 			<br />
