--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -48,6 +48,28 @@
 		<td>
 			<span class="date">
 				
+				<big><strong>2023</strong></big><br />
+				
+				January
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				An Algorithm to Separate Ionospheric Turbulence Radar Echoes From Those of Meteor Trails in Large Data Sets.
+			</span><br />
+			<span class="authors">
+				Magnus F Ivarsen, Jean-Pierre St-Maurice, Glenn C Hussey, Draven Galeschuk, Adam Lozinsky, Brian Pitzel, and Kathryn A McWilliams.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Geophysical Research: Space Physics 128(1)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
 				<big><strong>2022</strong></big><br />
 				
 				December
