--- a/_includes/conf.html
+++ b/_includes/conf.html
@@ -44,6 +44,28 @@
 			</span>
 		</td>
 	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				March
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Magnetic field-aligned plasma currents in gravitational fields.
+			</span><br />
+			<span class="authors">
+				Odd Erik Garcia, Egil Leer, HL P{\'e}cseli, and Jan Karsten Trulsen.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Annales Geophysicae</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
 </tbody>
 </table>
 
