--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -1826,6 +1826,94 @@
 			</span>
 		</td>
 	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				November
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Oasis: a high-level/high-performance open source Navier--Stokes solver.
+			</span><br />
+			<span class="authors">
+				Mikael Mortensen and Kristian Valen-Sendstad.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Computer physics communications</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				November
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Simultaneous ground-based optical and HF radar observations of the ionospheric footprint of the open/closed field line boundary along the geomagnetic meridian.
+			</span><br />
+			<span class="authors">
+				X-C Chen, DA Lorentzen, JI Moen, K Oksavik, and LJ Baddeley.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Geophysical Research: Space Physics 120(11)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				October
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Scintillation and loss of signal lock from poleward moving auroral forms in the cusp ionosphere.
+			</span><br />
+			<span class="authors">
+				Kjellmar Oksavik, Christer Meeren, Dag Arne Lorentzen, LJ Baddeley, and J Moen.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Geophysical Research: Space Physics 120(10)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				October
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				MICA sounding rocket observations of conductivity-gradient-generated auroral ionospheric responses: Small-scale structure with large-scale drivers.
+			</span><br />
+			<span class="authors">
+				KA Lynch, DL Hampton, M Zettergren, TA Bekkeng, M Conde, PA Fernandes, P Horak, M Lessard, R Miceli, R Michell, and others.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Geophysical Research: Space Physics 120(11)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
 </tbody>
 </table>
 
