--- a/_includes/conf.html
+++ b/_includes/conf.html
@@ -50,6 +50,50 @@
 				
 				<big><strong>2015</strong></big><br />
 				
+				July
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Spectral properties of electrostatic drift wave turbulence in the laboratory and the ionosphere.
+			</span><br />
+			<span class="authors">
+				HL P{\'e}cseli.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Annales Geophysicae</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				April
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Transitions between states of magnetotail--ionosphere coupling and the role of solar wind dynamic pressure: the 25 July 2004 interplanetary CME case.
+			</span><br />
+			<span class="authors">
+				PE Sandholt, Charlie J Farrugia, and WF Denig.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Annales Geophysicae</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
 				March
 			</span>
 		</td>
