--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -1815,6 +1815,28 @@
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
+				Plasma turbulence and coherent structures in the polar cap observed by the ICI-2 sounding rocket.
+			</span><br />
+			<span class="authors">
+				A Spicher, WJ Miloch, LBN Clausen, and JI Moen.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Geophysical Research: Space Physics 120(12)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				December
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
 				Low frequency electrostatic waves propagating in plasmas with parameters varying along magnetic field lines.
 			</span><br />
 			<span class="authors">
@@ -1909,6 +1931,160 @@
 				KA Lynch, DL Hampton, M Zettergren, TA Bekkeng, M Conde, PA Fernandes, P Horak, M Lessard, R Miceli, R Michell, and others.
 			</span><br />
 			<span class="venuetype"></span><span class="venue">Journal of Geophysical Research: Space Physics 120(11)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				October
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				On the collocation of the cusp aurora and the GPS phase scintillation: A statistical study.
+			</span><br />
+			<span class="authors">
+				Yaqi Jin, J{\o}ran I Moen, and Wojciech J Miloch.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Geophysical Research: Space Physics 120(10)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				September
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Models for the probability densities of the turbulent plasma flux in magnetized plasmas.
+			</span><br />
+			<span class="authors">
+				AS Bergsaker, {\AA} Fredriksen, HL P{\'e}cseli, and JK Trulsen.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Physica Scripta 90(10)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				August
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				The auroral red line polarisation: modelling and measurements.
+			</span><br />
+			<span class="authors">
+				Jean Lilensten, V{\'e}ronique Bommier, Mathieu Barth{\'e}lemy, Herv{\'e} Lamy, David Bernard, Joran Idar Moen, Magnar Gullikstad Johnsen, Unni Pia L{\o}vhaug, and Fr{\'e}d{\'e}ric Pitout.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Space Weather and Space Climate</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				July
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				On the symmetry of ionospheric polar cap patch exits around magnetic midnight.
+			</span><br />
+			<span class="authors">
+				J Moen, Keisuke Hosokawa, Nj{\aa}l Gulbrandsen, and Lasse Boy Novock Clausen.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Geophysical Research: Space Physics 120(9)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				May
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Direct observations of the full Dungey convection cycle in the polar ionosphere for southward interplanetary magnetic field conditions.
+			</span><br />
+			<span class="authors">
+				Q-H Zhang, Mike Lockwood, JC Foster, S-R Zhang, B-C Zhang, IW McCrea, J Moen, M Lester, and J Michael Ruohoniemi.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Geophysical Research: Space Physics 120(6)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				May
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Electron density enhancements in the polar cap during periods of dayside reconnection.
+			</span><br />
+			<span class="authors">
+				Lasse Boy Novock Clausen and JI Moen.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Geophysical Research: Space Physics 120(6)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2015</strong></big><br />
+				
+				April
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				A miniaturized subpayload system used for measurements in the ionosphere-A design concept.
+			</span><br />
+			<span class="authors">
+				Johan Ludvig Tresvig and Torfnn Lindem.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">IEEE Aerospace and Electronic Systems Magazine 30(4)</span>.
 			<br />
 			<span class="links">
 			</span>
