--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -2500,7 +2500,7 @@
 				GPS scintillation effects associated with polar cap patches and substorm auroral activity: direct comparison.
 			</span><br />
 			<span class="authors">
-				Jin Yaqi Moen J\o{}ran I. and Wojciech J. Miloch.
+				Yaqi Jin, J{\o}ran I Moen, and Wojciech J. Miloch.
 			</span><br />
 			<span class="venuetype"></span><span class="venue">Journal of Space Weather and Space Climate</span>.
 			<br />
